# obs-atem

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  atem-box.md  atem-box.py  atem-controller.cpp  atem-controller.h  atem-macro-panel.py  bmd-guids.cpp  capture-atem.py  macro-dock.cpp  macro-dock.h  plugin-main.cpp  settings-dialog.cpp  settings-dialog.h
atem-simulator/: README.md  capture.py  capture.py.md  run.py  run.py.md
mnt/user-data/outputs/obs-atem-macros-py/: README.md
